new structure (Range (does not exist yet), Cube, Entry) Currency.cs not yet changed

--- a/ecb stats reader/ecb stats reader.csproj
+++ b/ecb stats reader/ecb stats reader.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cube.cs" />
     <Compile Include="Currency.cs" />
     <Compile Include="Entry.cs" />
     <Compile Include="Program.cs" />
